--- a/xhtml/index.xhtml
+++ b/xhtml/index.xhtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://www.w3.org/1999/xhtml">
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
   
   <h:head>
     <title>My boilerplate!</title>
